[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "2019"
path = "src/2019/main.rs"

[[bin]]
name = "2023"
path = "src/2023/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
hashbrown = "0.13.1"
time = "0.3.17"
reqwest = { version = "0.11.13", features = ["blocking"] }
num = { version = "0.4.0" }
rustc-hash = "1.1.0"
smallvec = { version = "1.10.0", features = ["specialization"] }
md5 = "0.7.0"
rayon = "1.6.1"
arrayvec = "0.7.2"